JDK compiler - store compile results for statical load